# SCVD_Agent

./: .gitignore  README.md  pyproject.toml
docs/: io_contract.md  workflow.md
docs/figures/: scvd_agent_workflow.mmd
examples/: scan_request.example.json
scvd_agent/: __init__.py  agents.py  api.py  business_agents.py  cli.py  context.py  io_contracts.py  knowledge.py  llm.py  llm_agents.py  models.py  orchestrator.py  parser.py  patch_agents.py  poc_agents.py  project_agents.py  prompts.py  rag_agents.py  reasoning_agents.py  reporting.py  schemas.py  validation_agents.py
tests/: test_agent.py
tests/fixtures/safe/: SafePool.sol
tests/fixtures/vulnerable/: BunniLikePool.sol
